[gd_scene load_steps=11 format=3 uid="uid://bsfmlosvitsc6"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_iogwh"]
[ext_resource type="PackedScene" uid="uid://dup4yhwe2flqp" path="res://Scenes/platform.tscn" id="2_18mtu"]
[ext_resource type="Texture2D" uid="uid://xritsdiq6thm" path="res://Assets/HUD/GeneralBackground.png" id="2_epbu7"]
[ext_resource type="PackedScene" uid="uid://1ab614obq2t2" path="res://Scenes/capy.tscn" id="3_rb03k"]
[ext_resource type="Script" path="res://Scripts/obstacle_spawner.gd" id="4_7w45q"]
[ext_resource type="PackedScene" uid="uid://bjpki44xtcce4" path="res://Scenes/obstacle.tscn" id="5_afkm4"]
[ext_resource type="Script" path="res://Scripts/area_2d.gd" id="6_hjrrf"]
[ext_resource type="PackedScene" uid="uid://d0kchyh566ct" path="res://Scenes/hud.tscn" id="7_brqk0"]
[ext_resource type="PackedScene" uid="uid://dt0maksfuhyby" path="res://Scenes/sound_manager.tscn" id="8_lktrt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h6sll"]
size = Vector2(56, 478)

[node name="Main" type="Node2D"]
script = ExtResource("1_iogwh")

[node name="ColorRect" type="TextureRect" parent="."]
modulate = Color(0.980392, 1, 0.933333, 1)
texture_filter = 1
offset_left = -13.0
offset_top = -6.0
offset_right = 246.0
offset_bottom = 250.0
scale = Vector2(7.47527, 6.24547)
mouse_filter = 2
texture = ExtResource("2_epbu7")

[node name="Platform" parent="." instance=ExtResource("2_18mtu")]

[node name="Capy" parent="." instance=ExtResource("3_rb03k")]
position = Vector2(265, 405)
scale = Vector2(6, 6)

[node name="SpawnLocation" type="Marker2D" parent="."]
position = Vector2(217, 420)

[node name="ObstacleSpawner" type="Node2D" parent="."]
position = Vector2(951, 424)
script = ExtResource("4_7w45q")
obstacle_scene = ExtResource("5_afkm4")

[node name="SpawnTimer" type="Timer" parent="ObstacleSpawner"]
wait_time = 3.0

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(1920, 449)

[node name="GarbadeCollector" type="Area2D" parent="."]
script = ExtResource("6_hjrrf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GarbadeCollector"]
position = Vector2(-37, 236)
shape = SubResource("RectangleShape2D_h6sll")

[node name="ScoreTimer" type="Timer" parent="."]

[node name="HUD" parent="." instance=ExtResource("7_brqk0")]

[node name="SoundManager" parent="." instance=ExtResource("8_lktrt")]

[connection signal="start_game_objects" from="." to="Platform" method="_on_main_start_game_objects"]
[connection signal="start_game_objects" from="." to="Capy" method="_on_main_start_game_objects"]
[connection signal="start_game_objects" from="." to="ObstacleSpawner" method="_on_main_start_game_objects"]
[connection signal="stop_game_objects" from="." to="Platform" method="_on_main_stop_game_objects"]
[connection signal="stop_game_objects" from="." to="Capy" method="_on_main_stop_game_objects"]
[connection signal="stop_game_objects" from="." to="ObstacleSpawner" method="_on_main_stop_game_objects"]
[connection signal="game_over" from="Capy" to="." method="game_over"]
[connection signal="num_lives_changed" from="Capy" to="HUD" method="_on_capy_num_lives_changed"]
[connection signal="timeout" from="ObstacleSpawner/SpawnTimer" to="ObstacleSpawner" method="_on_spawn_timer_timeout"]
[connection signal="body_entered" from="GarbadeCollector" to="GarbadeCollector" method="_on_body_entered"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
